Added lab1 file

--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,14 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Hon Lao</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<a href="http://imgur.com/gSvtenJ"><img src="http://i.imgur.com/gSvtenJ.jpg" title="Profile Picture" height=300 width=300 /></a>
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
-
-	<h4>Projects</h4>
-	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
-	</ol>
+	</p> Hon Lao is a fourth year computer science undergraduate student studying at University of California, San Diego. He enjoys sharpening knives and emotional chinese music.
+	<h4><a href="projects.html">Past Projects</a></h4>
+	<h4><a href="experience.html">Past Experience</h4>
+	<a href="http://github.com/hlao002">Github Account</a>
 </body>
 </html>
